Old-federated-project/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: federated-graph-framework
  name: federated-graph-framework
